--- a/css/style.css
+++ b/css/style.css
@@ -30,16 +30,16 @@ body{
     }
 }
 .greetings > span:nth-child(2){
-    animation-delay: .2s ;
+    animation-delay: 0.2s ;
 }
 .greetings > span:nth-child(3){
-    animation-delay: .4s ;
+    animation-delay: 0.4s ;
 }
 .greetings > span:nth-child(4){
-    animation-delay: .6s;
+    animation-delay: 0.6s;
 }
 .greetings > span:nth-child(5){
-    animation-delay: .8s;
+    animation-delay: 0.8s;
 }
 .greetings > span:nth-child(6){
     animation-delay: 1s ;
